working with ui. needs cleanup and ux improvements

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@urbit/http-api": "^2.1.0",
-    "browserify": "^17.0.0"
+    "browserify": "^17.0.0",
+    "urbit-ob": "^5.0.1"
   }
 }
